examples/test/testpolicy14480.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14480
  namespace: namespace374
spec:
  podSelector:
    matchLabels:
      key43: value27
      key39: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value41
          key29: value48
      podSelector:
        matchLabels:
          key41: value19
